--- a/unorderd_list.html
+++ b/unorderd_list.html
@@ -62,7 +62,7 @@
         <li>8</li>
         <li>9</i>
     </ul>
-    <a href="http://127.0.0.1:5500/index.html">
+    <a href="./index.html">
         Go Back
     </a>
 </body>
